--- a/app/src/main/res/layout/add_contact_screen.xml
+++ b/app/src/main/res/layout/add_contact_screen.xml
@@ -78,6 +78,20 @@
         </LinearLayout>
     </FrameLayout>
 
+    <LinearLayout
+        style="@style/layoutLayoutConfirmationMessage"
+        android:id="@+id/layout_layout_contact_added"
+        android:alpha="0"
+        android:visibility="visible">
+        <LinearLayout
+            android:id="@+id/layout_contact_added"
+            style="@style/layoutConfirmationMessage">
+            <TextView
+                android:id="@+id/text_contact_added"
+                style="@style/textContactAdded"/>
+        </LinearLayout>
+    </LinearLayout>
+
     <!-- BOTTOM BAR -->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         style="@style/backBottomBar"
