--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,9 +28,16 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
         <!-- end of default styles -->
 
         <item name="android:background">@color/background_color</item>
+    </style>
+
+    <style name="AlertDialogCustom" parent="@android:style/Theme.Dialog">
+        <item name="android:textColor">#00FF00</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:textSize">10sp</item>
     </style>
 
 
@@ -193,6 +200,14 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="layoutInfoHelper">
+        <item name="android:background">@color/transparent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
     <!-- +++++++++++++++ END OF GENERIC STYLE +++++++++++++++++++ -->
     <!-- +++++++++++++++ LOADING SCREEN +++++++++++++++++++ -->
 
@@ -231,14 +246,6 @@
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">200dp</item>
         <item name="android:background">@color/transparent</item>
-    </style>
-
-    <style name="layoutLoadingFirstTimeText">
-        <item name="android:background">@color/transparent</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:gravity">center</item>
-        <item name="android:orientation">vertical</item>
     </style>
 
     <style name="layoutWelcomeFirstTime" parent="layoutBlankFirstTime">
@@ -966,6 +973,12 @@
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_weight">1</item>
         <item name="android:background">@color/transparent</item>
+    </style>
+
+    <style name="SPExplanation"  parent="textFirstTime">
+        <item name="android:textSize">@dimen/settings_button</item>
+        <item name="android:text">@string/sp_explanation</item>
+        <item name="android:gravity">center</item>
     </style>
 
     <!-- +++++++++++++++ END OF STARTING POINT SCREEN +++++++++++++++++++ -->
